(ui) Fix position of 10-years anniversary logo on mobile

--- a/astrobin/static/astrobin/scss/astrobin-mobile.scss
+++ b/astrobin/static/astrobin/scss/astrobin-mobile.scss
@@ -29,7 +29,8 @@
     &.ten-year-anniversary {
       font-size: 24px;
       line-height: 42px;
-      margin-left: 12px;
+      margin-left: 6px;
+      margin-top: -12px
     }
   }
 
